# cascade

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
scripts/: build-secret-yaml.py  generate-secret.py
src/: __init__.py  apis.py  app.py  callback.py  database.py  github.py  webhook.py
src/keys/: README.md
src/static/js/: dashboard.mjs  ws.mjs
src/static/js/utils/: userFetch.mjs
src/templates/: dashboard.html  index.html
