[tool.poetry]
name = "src"
version = "0.1.0"
description = "GitHub App Demo"
authors = ["Shiqi Mei <shiqi.mei@askcodebase.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
flask-jwt-extended = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.app:dev"
jwt = "scripts.generate-jwt-secret:main"